# asyncblobdict

./: LICENSE  README.md  example_usage.ipynb  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
src/asyncblobdict/: __init__.py  async_blob_store.py  azure_blob_adapter.py  errors.py  local_file_adapter.py  serializers.py  storage_protocols.py
src/asyncblobdict/tests/: test_async_blob_store.py
